Forget userdebug it's time for some poweruser builds!
* It's like user only without the odexing! Should have good battery life AND be customizable for themers and such :)

Signed-off-by: Chet Kener <Cl3Kener@gmail.com>

Conflicts:
	core/main.mk

Change-Id: I6407214330a5a0a84aae5750f41701f069b581b7

--- a/core/build-system.html
+++ b/core/build-system.html
@@ -277,10 +277,10 @@ for these).
 </tr>
 <tr>
     <td>
-        <code>userdebug<code>
+        <code>poweruser<code>
     </td>
     <td>
-        "<code>make userdebug</code>"
+        "<code>make poweruser</code>"
         <p>
         The same as <code>user</code>, except:
         <ul>
